--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>To-Do List</h1>
         <input type="text" id="taskInput" placeholder="Add new task...">
         <button onclick="addTask()">Add Task</button>
+        <input type="text" id="searchInput" placeholder="Search...">
+        <button onclick="searchTasks()">Search</button>
         <ul id="taskList">
             <!-- Tasks will be added dynamically using JavaScript -->
         </ul>
