--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div>
         <h1>To-Do List</h1>
         <input type="text" id="taskInput" placeholder="Add new task...">
-        <button onclick="addTask()">Add Task</button>
+        <button onclick="addTask()">New Task</button>
+        <span id="error" style="color: red;"></span>
+        <br>
         <input type="text" id="searchInput" placeholder="Search...">
         <button onclick="searchTasks()">Search</button>
         <ul id="taskList">
