--- a/index.html
+++ b/index.html
@@ -11,15 +11,34 @@
 <body>
     <div>
         <h1>To-Do List</h1>
-        <input type="text" id="taskInput" placeholder="Add new task...">
-        <button onclick="addTask()">New Task</button>
-        <span id="error" style="color: red;"></span>
+        <form id="taskForm">
+            <label for="" taskInput">task:</label>
+            <input type="text" id="taskInput" placeholder="Add new task...">
+            <button type="button" id="addButton">Add</button>
+            <p id="error"></p>
+        </form>
+        <div>
+            <label for="searchInput">Search:</label>
+            <input type="text" id="searchInput">
+        </div>
+        <div>
+            <label for="sortSelect">Sort by:</label>
+            <select id="sortSelect">
+                <option value="priority">Priority</option>
+                <option value="date">Due date</option>
+                <option value="name">Name</option>
+            </select>
+        </div>
+        <ul id="taskList">
+        </ul>
+    </div>
+    <!---<span id="error" style="color: red;"></span>
         <br>
         <input type="text" id="searchInput" placeholder="Search...">
         <button onclick="searchTasks()">Search</button>
-        <ul id="taskList">
-            <!-- Tasks will be added dynamically using JavaScript -->
-        </ul>
+        <ul id="taskList"> -->
+    <!-- Tasks will be added dynamically using JavaScript -->
+    </ul>
     </div>
     <script src="tasks.js"></script>
 </body>
