--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <div>
         <h1>To-Do List</h1>
         <form id="taskForm">
-            <label for="" taskInput">task:</label>
+            <label for="taskInput">task:</label>
             <input type="text" id="taskInput" placeholder="Add new task...">
             <button type="button" id="addButton">Add</button>
+            <label for="priorityInput">Priority:</label>
+            <input type="number" id="priorityInput" min="1" max="10">
             <p id="error"></p>
         </form>
         <div>
@@ -33,10 +35,10 @@
         </ul>
     </div>
     <!---<span id="error" style="color: red;"></span>
-        <br>
-        <input type="text" id="searchInput" placeholder="Search...">
-        <button onclick="searchTasks()">Search</button>
-        <ul id="taskList"> -->
+            <br>
+            <input type="text" id="searchInput" placeholder="Search...">
+            <button onclick="searchTasks()">Search</button>
+            <ul id="taskList"> -->
     <!-- Tasks will be added dynamically using JavaScript -->
     </ul>
     </div>
