fixed the priority input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
             <input type="text" id="taskInput" placeholder="Add new task...">
             <button type="button" id="addButton">Add</button>
             <label for="priorityInput">Priority:</label>
-            <input type="number" id="priorityInput" min="1" max="10">
+            <select id="prioritySelect">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
             <p id="error"></p>
         </form>
         <div>
@@ -34,13 +45,6 @@
         <ul id="taskList">
         </ul>
     </div>
-    <!---<span id="error" style="color: red;"></span>
-            <br>
-            <input type="text" id="searchInput" placeholder="Search...">
-            <button onclick="searchTasks()">Search</button>
-            <ul id="taskList"> -->
-    <!-- Tasks will be added dynamically using JavaScript -->
-    </ul>
     </div>
     <script src="tasks.js"></script>
 </body>
