--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>To-Do List</title>
 
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
@@ -15,6 +14,9 @@
             <label for="taskInput">task:</label>
             <input type="text" id="taskInput" placeholder="Add new task...">
             <button type="button" id="addButton">Add</button>
+            <label for="priorityInput">Priority:</label>
+            <input type="number" id="priorityInput" min="1" max="5" placeholder="1-5">
+
             <p id="error"></p>
         </form>
         <div>
