tasks autimatically are sorted based on priority

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="text" id="taskInput" placeholder="Add new task...">
             <button type="button" id="addButton">Add</button>
             <label for="priorityInput">Priority:</label>
-            <input type="number" id="priorityInput" min="1" max="5" placeholder="1-5">
+            <input type="number" id="priorityInput" min="1" max="5" placeholder="1-5" required>
 
             <p id="error"></p>
         </form>
