added a logout page

--- a/home.html
+++ b/home.html
@@ -16,6 +16,9 @@
         <input type="submit" value="Sign In">
     </form>
     <p>Don't have an account? <a href="register.html">Register here</a>.</p>
+
+    <br>
+       <button onclick="location.href='logout.php'">Logout</button>
 </body>
 
 </html>
